--- a/wofifull/style.css
+++ b/wofifull/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "JetBrains Nerd Font";
+    font-family: "JetBrainsMono Nerd Font";
     font-size: 15px;
     background: transparent;
 }
